--- a/calc_intro_corrections.ipynb
+++ b/calc_intro_corrections.ipynb
@@ -245,8 +245,8 @@
    "source": [
     "#### Multivariate input. Univariate output. $\\mathbb{R}^M \\rightarrow \\mathbb{R}$\n",
     "\n",
-    "##### Forward pass\n",
-    "Suppose we have some features $x_1, x_2, \\dots, x_M$, and we predict a single scalar $y = w_1x_1 + w_2x_2 + \\dotsm + w_Mx_M$. We can write this in matrix notation as a dot product\n",
+    "##### Forward pass正向传播\n",
+    "Suppose we have some features $x_1, x_2, \\dots, x_M$, and we predict a single scalar $y = w_1x_1 + w_2x_2 + \\dots + w_Mx_M$. We can write this in matrix notation as a dot product\n",
     "$$\n",
     "y = \\sum_{i=1}^M w_ix_i = \\mathbf{w}^T\\mathbf{x} \\quad\\text{ where }\\quad\\mathbf{w} = \\begin{bmatrix}\n",
     "w_1 \\\\ w_2 \\\\ \\vdots \\\\ w_M\n",
@@ -263,7 +263,7 @@
     "id": "QBCTh3Qs3oiC"
    },
    "source": [
-    "##### Backward pass\n",
+    "##### Backward pass反向传播 (The same as backword propagation)\n",
     "Suppose we have a target $t$ and a loss function $L = (y-t)^2$, what is the gradient $\\nabla_\\mathbf{w} L$?\n",
     "\n",
     "Remember the definition of the gradient,\n",
@@ -275,7 +275,7 @@
     "\\frac{\\partial L}{\\partial w_M} \\\\\n",
     "\\end{bmatrix}\n",
     "$$\n",
-    "\n",
+    "此乃一个竖向量，维度为M * 1\n",
     "Each element is a partial derivative that can be written out using *chain rule*.\n",
     "\n",
     "$$\n",
@@ -290,7 +290,10 @@
     "\\vdots \\\\\n",
     "2(y-t) \\; x_M \\\\\n",
     "\\end{bmatrix} = 2(y-t) \\mathbf{x}\n",
-    "$$"
+    "$$\n",
+    "用更简洁的语言解释反向传播：我们要求的是损失函数对权重的梯度，我们可以通过链式法则将其分解为两个部分，一个是损失函数L对输出y的梯度$\\nabla_y L$，一个是输出y对权重w的梯度$\\nabla_w y$，然后将这两个部分相乘即可得到损失函数对权重的梯度。\n",
+    "为什么要这样做呢？因为我们可以很容易的求出$\\nabla_y L$，然后再求出$\\nabla_w y$，这样就可以很容易的求出$\\nabla_w L$。\n",
+    "从数学上来说，这是因为矩阵的导数运算是满足链式法则的。"
    ]
   },
   {
@@ -319,13 +322,13 @@
     "#### Multivariate input. __Multivariate output__. $\\mathbb{R}^D \\rightarrow \\mathbb{R}^M$\n",
     "\n",
     "##### Forward pass\n",
-    "Suppose we have some features $x_1, x_2, \\dots, x_D$, and we predict a **vector** $\\mathbf{y \\in \\mathbb{R}^M}$ where $y_j = w_{j1}x_1 + w_{j2}x_2 + \\dotsm + w_{jD}x_D$. We can write this in matrix notation as a **matrix-vector product**.\n",
+    "Suppose we have some features $x_1, x_2, \\dots, x_D$, and we predict a **vector** $\\mathbf{y \\in \\mathbb{R}^M}$ where $y_j = w_{j1}x_1 + w_{j2}x_2 + \\dots + w_{jD}x_D$. We can write this in matrix notation as a **matrix-vector product**.\n",
     "$$\n",
     "\\mathbf{y} = \\begin{bmatrix}\n",
-    "w_{11}x_1 + w_{12}x_2 + \\dotsm + w_{1D}x_D \\\\\n",
-    "w_{21}x_1 + w_{22}x_2 + \\dotsm + w_{2D}x_D \\\\\n",
+    "w_{11}x_1 + w_{12}x_2 + \\dots + w_{1D}x_D \\\\\n",
+    "w_{21}x_1 + w_{22}x_2 + \\dots + w_{2D}x_D \\\\\n",
     "\\vdots \\\\\n",
-    "w_{M1}x_1 + w_{M2}x_2 +\\dotsm + w_{MD}x_D \\\\\n",
+    "w_{M1}x_1 + w_{M2}x_2 +\\dots + w_{MD}x_D \\\\\n",
     "\\end{bmatrix} =\n",
     "\\begin{bmatrix}\n",
     "w_1^Tx \\\\\n",
@@ -362,6 +365,8 @@
    },
    "source": [
     "##### Backward pass\n",
+    "\n",
+    "这里的L：$L = ||\\mathbf{y}-\\mathbf{t}||_2^2 = (\\mathbf{y}-\\mathbf{t})^T(\\mathbf{y}-\\mathbf{t}) = \\sum_{j=1}^M (y_j-t_j)^2$\n",
     "Suppose we have a target $t$ and a loss function $L = ||y-t||_2^2$, what is the gradient $\\nabla_\\mathbf{W} L$?\n",
     "\n",
     "Remember the definition of the gradient,\n",
@@ -378,7 +383,7 @@
     "\\frac{\\partial L}{\\partial \\mathbf{w_M}}^T \\\\\n",
     "\\end{bmatrix}\n",
     "$$\n",
-    "\n",
+    "这个矩阵的行代表L对W每一个元素的梯度，列代表L对w的每一个元素的每一个个分量的偏导数\n",
     "In this particular case, *because $L$ depends on $\\mathbf{w_1}$ only through $y_1$*, we have\n",
     "\n",
     "$$\n",
@@ -387,6 +392,22 @@
     "\n",
     "(ie. Can show that $\\frac{\\partial y_j}{\\partial \\mathbf{w_k}} = 0$ if $j\\ne k$.)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "证明如下：\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial y_j}{\\partial \\mathbf{w_k}} &= \\frac{\\partial}{\\partial \\mathbf{w_k}} \\mathbf{w_j}^T\\mathbf{x} = 0 \\quad \\text{if } j \\ne k\\\\\n",
+    "\\frac{\\partial y_j}{\\partial \\mathbf{w_k}} &= \\frac{\\partial}{\\partial \\mathbf{w_k}} \\mathbf{w_j}^T\\mathbf{x} = \\frac{\\partial}{\\partial \\mathbf{w_k}} \\sum_{i=1}^D w_{ji}x_i = x_k \\quad \\text{if } j = k\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "所以当j!=k时，$\\frac{\\partial y_j}{\\partial \\mathbf{w_k}} = 0$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -486,22 +507,13 @@
     "\\begin{aligned}\n",
     "& \\nabla_\\mathbf{y} L = 2(\\mathbf{y} - \\mathbf{t})                 &\\text{(Pass gradient through loss function)}\\\\\n",
     "& \\nabla_\\mathbf{h} L = ((\\nabla_\\mathbf{y} L)^T\\mathbf{W^{(2)}})^T                 &\\text{(Pass gradient through linear function; uses (1))}\\\\\n",
+    "& \\nabla_\\mathbf{W^{(2)}} L = (\\nabla_\\mathbf{y} L)(\\nabla_\\mathbf{W^{(2)}} \\mathbf{y})                \\\\\n",
     "& \\nabla_\\mathbf{W^{(2)}} L = (\\nabla_\\mathbf{y} L)\\mathbf{h}^T                 &\\text{(Pass gradient to } \\mathbf{W^{(2)}} \\text{ ; uses (2))}\\\\\n",
     "& \\nabla_\\mathbf{z} L = (\\nabla_\\mathbf{h} L) \\circ \\sigma'(\\mathbf{z})                         &\\text{(Pass gradient through nonlinearity)} \\\\\n",
     "& \\nabla_\\mathbf{W^{(1)}} L = (\\nabla_\\mathbf{z} L)\\mathbf{x}^T                 &\\text{(Pass gradient to }\\mathbf{W^{(1)}} \\text{ ; uses (2))}\\\\\n",
     "\\end{aligned}\n",
     "$$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "9jXfmAKWLF0b",
-    "is_executing": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
